[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/destruction/destruction.gd" type="Script" id=3]
[ext_resource path="res://Scripts/glass thing.gd" type="Script" id=5]
[ext_resource path="res://game objects/Glass pain object.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]

[node name="glass thing" type="Spatial"]
transform = Transform( -2.18557e-07, 0, 1, 0, 1, 0, -1, 0, -2.18557e-07, 0, 0, 0 )
script = ExtResource( 5 )

[node name="Node" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( 4.45438e-07, 0, -0.3, 0, 3.4, 0, 5.9, 0, 2.26494e-08, -0.0611467, 2.49851, -1.3364e-08 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.25056e-12, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Glass pain" parent="." instance=ExtResource( 6 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )

[connection signal="break_glass" from="." to="Node" method="_on_glass_thing_break_glass"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
